--- a/package.json
+++ b/package.json
@@ -9,49 +9,50 @@
     "watch:build": "webpack --watch",
     "watch:server": "nodemon wild-blog-app --watch \"./app\"",
     "dev": "npm run watch:build | npm run watch:server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Kulgar/wild-blog.git"
-  },
-  "keywords": [
-    "Wild",
-    "Blog"
-  ],
-  "author": "Regis Millet",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Kulgar/wild-blog/issues"
-  },
-  "homepage": "https://github.com/Kulgar/wild-blog#readme",
-  "dependencies": {
-    "angular": "^1.6.1",
-    "angular-cookies": "^1.6.3",
-    "angular-materialize": "^0.2.2",
-    "angular-ui-router": "^0.4.2",
-    "body-parser": "~1.16.0",
-    "cookie-parser": "~1.4.3",
-    "express": "~4.14.1",
-    "express-jwt": "^5.1.0",
-    "jsonwebtoken": "^7.3.0",
-    "method-override": "~2.3.6",
-    "mongoose": "^4.8.7",
-    "morgan": "~1.7.0",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-env": "^1.2.1",
-    "css-loader": "^0.27.2",
-    "node-sass": "^4.5.0",
-    "nodemon": "^1.11.0",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1",
-    "webpack-livereload-plugin": "^0.10.0"
-  }
-}
+    },
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Kulgar/wild-blog.git"
+      },
+      "keywords": [
+      "Wild",
+      "Blog"
+      ],
+      "author": "Regis Millet",
+      "license": "ISC",
+      "bugs": {
+        "url": "https://github.com/Kulgar/wild-blog/issues"
+        },
+        "homepage": "https://github.com/Kulgar/wild-blog#readme",
+        "dependencies": {
+          "angular": "^1.6.1",
+          "angular-cookies": "^1.6.3",  
+          "angular-materialize": "^0.2.2",
+          "angular-ui-router": "^0.4.2",
+          "body-parser": "~1.16.0",
+          "cookie-parser": "~1.4.3",
+          "express": "~4.14.1",
+          "express-jwt": "^5.1.0",
+          "jsonwebtoken": "^7.3.0",
+          "method-override": "~2.3.6",
+          "momentjs": "^2.0.0",
+          "mongoose": "^4.8.7",
+          "morgan": "~1.7.0",
+          "passport": "^0.3.2",
+          "passport-facebook": "^2.1.1",
+          "passport-local": "^1.0.0",
+          "serve-favicon": "~2.3.2"
+          },
+          "devDependencies": {
+            "babel-core": "^6.23.1",
+            "babel-loader": "^6.4.0",
+            "babel-preset-env": "^1.2.1",
+            "css-loader": "^0.27.2",
+            "node-sass": "^4.5.0",
+            "nodemon": "^1.11.0",
+            "sass-loader": "^6.0.3",
+            "style-loader": "^0.13.2",
+            "webpack": "^2.2.1",
+            "webpack-livereload-plugin": "^0.10.0"
+          }
+        }
